# tailscale-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  flake.nix
.github/: pull_request_template.md
.github/workflows/: c.yml  ci.yml  elixir.yml  nix.yml  python.yml  setup-rust.yml
checks/: Cargo.toml
examples/: README.md  peer_ping.rs  tcp_echo.rs
examples/axum/: README.md  main.rs
examples/peer_ping/: README.md  main.rs
examples/reverse_proxy/: main.rs
examples/ssh_peer_lookup/: README.md  main.rs
examples/tcp_echo/: README.md  main.rs
src/: addr.rs  axum.rs  config.rs  error.rs  lib.rs  proxy.rs
src/config/: mod.rs
src/ssh/: channel_server.rs  channel_write.rs  mod.rs  ratatui.rs
src/statefile/: error.rs  mod.rs  v0.rs
supply-chain/: config.toml
tests/: basic.rs
ts_array256/: Cargo.toml  README.md
ts_array256/src/: lib.rs
ts_bart/: Cargo.toml
ts_bart_packetfilter/: Cargo.toml  README.md
ts_bart_packetfilter/src/: lib.rs
ts_bitset/: Cargo.toml  README.md
ts_bitset/proptest-regressions/: lib.txt
ts_bitset/src/: lib.rs
ts_capabilityversion/: Cargo.toml  README.md
ts_capabilityversion/src/: lib.rs
ts_cli_util/: Cargo.toml  README.md
ts_cli_util/src/: lib.rs
ts_control/: Cargo.toml  README.md
ts_control/src/: config.rs  control_dialer.rs  derp.rs  lib.rs  map_request_builder.rs  node.rs
ts_control/src/client/: connect.rs  map_stream.rs  mod.rs  ping.rs  register.rs
ts_control/src/tokio/: client.rs  connect.rs  map_stream.rs  mod.rs  ping.rs  prefixed_reader.rs  register.rs
ts_control_noise/: Cargo.toml  README.md
ts_control_noise/proptest-regressions/: codec.txt
ts_control_noise/src/: codec.rs  error.rs  framed_io.rs  handshake.rs  io.rs  lib.rs  messages.rs
ts_control_serde/: Cargo.toml  README.md
ts_control_serde/src/: derp_map.rs  dns.rs  host_info.rs  lib.rs  netmap.rs  node.rs  ping.rs  register.rs
ts_dataplane/: Cargo.toml  README.md
ts_dataplane/src/: async_tokio.rs  lib.rs  packet_ident.rs
ts_derp/: Cargo.toml  README.md
ts_derp/examples/: listen.rs  ping.rs
ts_derp/src/: async_tokio.rs  client.rs  error.rs  lib.rs  peer_lookup.rs
ts_devtools/: Cargo.toml
ts_disco_protocol/: Cargo.toml  README.md
ts_disco_protocol/src/: lib.rs  packet.rs
ts_dynbitset/: Cargo.toml
ts_dynbitset/src/: lib.rs
ts_elixir/: README.md  mix.exs  staging_publish_deps.py
ts_elixir/config/: config.exs  prod.exs  test.exs
ts_elixir/lib/: erlang.ex  tailscale.ex
ts_elixir/test/: async_callback_test.exs  basic_test.exs
ts_ffi/: .gitignore  Cargo.toml  build.rs
ts_ffi/examples/: Makefile  default.nix
ts_ffi/examples/lookup_peer/: lookup_peer.c
ts_ffi/examples/tcp_echo/: tcp_echo.c
ts_ffi/examples/udp_ping/: udp_ping.c
ts_ffi/src/: config.rs  keys.rs  lib.rs  tcp.rs  udp.rs  util.rs
ts_hexdump/: Cargo.toml  README.md
ts_hexdump/src/: lib.rs
ts_http_util/: Cargo.toml  README.md
ts_http_util/src/: client.rs  error.rs  http1.rs  lib.rs
ts_keys/: Cargo.toml  README.md
ts_keys/src/: keystate.rs  lib.rs  macros.rs
ts_kv_store/: Cargo.toml  README.md
ts_kv_store/src/: index.rs  iter.rs  lib.rs  operations.rs  pub_sub.rs  raw.rs  schema.rs  singleton.rs  storage.rs  transactions.rs
ts_netcheck/: Cargo.toml  README.md
ts_netcheck/src/: derp_latency.rs  https.rs  icmp.rs  lib.rs
ts_netstack_smoltcp/: Cargo.toml  README.md
ts_netstack_smoltcp/benches/: throughput_tcp.rs  throughput_udp.rs
ts_netstack_smoltcp/examples/: tcp_connect_tun.rs  tcp_connect_tun_async.rs  tcp_pingpong_pipe.rs  tcp_pingpong_pipe_async.rs  udp_tun.rs  udp_tun_async.rs
ts_netstack_smoltcp/examples/axum_tun/: main.rs
ts_netstack_smoltcp/examples/common/: mod.rs
ts_netstack_smoltcp/src/: lib.rs
ts_netstack_smoltcp_core/: Cargo.toml  README.md
ts_netstack_smoltcp_core/src/: lib.rs  stack_control_impl.rs
ts_netstack_smoltcp_core/src/command/: channel.rs  error.rs  mod.rs  request.rs
ts_netstack_smoltcp_core/src/command/tcp/: stream.rs
ts_netstack_smoltcp_core/src/socket_impl/: mod.rs  raw.rs  udp.rs
ts_netstack_smoltcp_core/src/socket_impl/tcp/: listener.rs  stream.rs
ts_netstack_smoltcp_socket/: Cargo.toml  README.md
ts_netstack_smoltcp_socket/src/: lib.rs  raw.rs  udp.rs
ts_netstack_smoltcp_socket/src/tcp/: listener.rs  stream.rs
ts_nodecapability/: Cargo.toml  README.md
ts_nodecapability/src/: lib.rs
ts_noise/: Cargo.toml  README.md
ts_noise/src/: core.rs  ik.rs  ikpsk2.rs  lib.rs  messages.rs
ts_overlay_router/: Cargo.toml  README.md
ts_overlay_router/src/: inbound.rs  lib.rs  outbound.rs
ts_packet/: Cargo.toml  README.md
ts_packet/src/: lib.rs  old.rs
ts_packetfilter/: Cargo.toml  README.md
ts_packetfilter/src/: lib.rs
ts_packetfilter_serde/: Cargo.toml  README.md
ts_packetfilter_serde/src/: ip_proto.rs  ip_range.rs  lib.rs
ts_packetfilter_state/: Cargo.toml  README.md
ts_packetfilter_state/src/: lib.rs
ts_peercapability/: Cargo.toml  README.md
ts_peercapability/src/: lib.rs
ts_python/: Cargo.toml  README.md  pyproject.toml
ts_python/examples/: README.md
ts_python/src/: key_state.rs  lib.rs  tcp.rs  udp.rs
ts_runtime/: Cargo.toml  README.md
ts_runtime/src/: control_runner.rs  dataplane.rs  derp_latency.rs  env.rs  error.rs  lib.rs  multiderp.rs  netmon.rs  netstack_actor.rs  packetfilter.rs  peer_tracker.rs  registry.rs  retained_bus.rs  route_updater.rs  src_filter.rs  stunner.rs  task.rs
ts_test_util/: Cargo.toml  README.md
ts_test_util/src/: lib.rs
ts_time/: Cargo.toml  README.md
ts_time/src/: lib.rs
ts_tls_util/: Cargo.toml  README.md
ts_tls_util/src/: insecure.rs  lib.rs
ts_transport/: Cargo.toml  README.md
ts_transport/src/: batch_iter.rs  lib.rs  map_key.rs
ts_transport_derp/: Cargo.toml  README.md
ts_transport_derp/examples/: listen.rs  ping.rs
ts_transport_derp/src/: async_tokio.rs  dial.rs  lib.rs
ts_transport_tun/: Cargo.toml  README.md
ts_transport_tun/src/: async_tokio.rs  lib.rs
ts_tunnel/: Cargo.toml  README.md
ts_underlay_router/: Cargo.toml  README.md
(+71 files in other folders)
