[workspace]
resolver = "3"
members = [
    "checks",
    "ts_array256",
    "ts_bart",
    "ts_bart_packetfilter",
    "ts_bitset",
    "ts_capabilityversion",
    "ts_cli_util",
    "ts_control",
    "ts_control_noise",
    "ts_control_serde",
    "ts_dataplane",
    "ts_devtools",
    "ts_disco_protocol",
    "ts_disco_protocol",
    "ts_dynbitset",
    "ts_elixir/native/ts_elixir",
    "ts_hexdump",
    "ts_http_util",
    "ts_keys",
    "ts_netcheck",
    "ts_netstack_smoltcp",
    "ts_netstack_smoltcp_core",
    "ts_netstack_smoltcp_socket",
    "ts_nodecapability",
    "ts_overlay_router",
    "ts_packet",
    "ts_packetfilter",
    "ts_packetfilter_serde",
    "ts_packetfilter_state",
    "ts_peercapability",
    "ts_python",
    "ts_runtime",
    "ts_test_util",
    "ts_time",
    "ts_tls_util",
    "ts_transport",
    "ts_transport_derp",
    "ts_transport_tun",
    "ts_underlay_router",
    "ts_tunnel",
]

[workspace.package]
edition = "2024"
license-file = "LICENSE"
publish = false

# This disagrees with the README's stated MSRV. That's intentional: this field causes cargo to error
# if the toolchain is too old, unconditionally failing the compile, while our policy is just that we
# only actively support the last two stables -- older compilers should still work as long as they
# can still compile the project. This field is the de facto MSRV (the oldest compiler that works).
rust-version = "1.91.0"

[workspace.dependencies]
aead = { version = "0.5", features = ["std"] }
base64 = "0.22"
blake2 = "0.10"
bytes = "1"
cfg-if = "1.0"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
crypto_box = { version = "0.9" }
divan = "0.1"
flume = "0.12"
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
hashbrown = "0.16"
heapless = "0.9"
hex = "0.4"
hkdf = { version = "0.12", features = ["std"] }
http = "1.4"
http-body-util = "0.1"
hyper = { version = "1", default-features = false, features = ["http2"] }
hyper-util = { version = "0.1", default-features = false, features = ["http1"] }
ipnet = { version = "2.12", default-features = false }
lazy_static = "1.5"
pin-project-lite = "0.2"
proptest = "1"
itertools = "0.14"
rand = "0.10"
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
smallvec = "1.15"
static_assertions = "1.1"
smoltcp = { version = "0.12", default-features = false }
tap = "1.0"
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-test = "0.2"
url = { version = "2", default-features = false }
x25519-dalek = { version = "3.0.0-pre.6", features = ["getrandom", "reusable_secrets", "static_secrets"] }
yoke = { version = "0.8", default-features = false }
zerocopy = { version = "0.8", features = ["derive"] }

# local workspace deps
tailscale = { path = "." }
ts_array256 = { path = "ts_array256" }
ts_bart = { path = "ts_bart" }
ts_bart_packetfilter = { path = "ts_bart_packetfilter" }
ts_bitset = { path = "ts_bitset", default-features = false }
ts_capabilityversion = { path = "ts_capabilityversion" }
ts_cli_util = { path = "ts_cli_util" }
ts_control = { path = "ts_control" }
ts_control_noise = { path = "ts_control_noise" }
ts_control_serde = { path = "ts_control_serde" }
ts_dataplane = { path = "ts_dataplane" }
ts_disco_protocol = { path = "ts_disco_protocol" }
ts_dynbitset = { path = "ts_dynbitset" }
ts_hexdump = { path = "ts_hexdump" }
ts_keys = { path = "ts_keys" }
ts_netcheck = { path = "ts_netcheck" }
ts_netstack_smoltcp = { path = "ts_netstack_smoltcp" }
ts_netstack_smoltcp_core = { path = "ts_netstack_smoltcp_core" }
ts_netstack_smoltcp_socket = { path = "ts_netstack_smoltcp_socket" }
ts_nodecapability = { path = "ts_nodecapability" }
ts_overlay_router = { path = "ts_overlay_router" }
ts_packet = { path = "ts_packet" }
ts_packetfilter = { path = "ts_packetfilter" }
ts_packetfilter_serde = { path = "ts_packetfilter_serde" }
ts_packetfilter_state = { path = "ts_packetfilter_state" }
ts_peercapability = { path = "ts_peercapability" }
ts_http_util = { path = "ts_http_util" }
ts_tls_util = { path = "ts_tls_util" }
ts_runtime = { path = "ts_runtime" }
ts_test_util = { path = "ts_test_util" }
ts_time = { path = "ts_time" }
ts_transport = { path = "ts_transport" }
ts_transport_derp = { path = "ts_transport_derp" }
ts_transport_tun = { path = "ts_transport_tun" }
ts_underlay_router = { path = "ts_underlay_router" }
ts_tunnel = { path = "ts_tunnel" }

[workspace.lints.rust]
closure_returning_async_block = "warn"
let-underscore = "warn"
missing_docs = "warn"

# useful reference: https://rust-lang.github.io/rust-clippy/master/index.html
[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
too_many_arguments = "allow"
# too annoying to manage dependencies
multiple_crate_versions = "allow"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"
private_intra_doc_links = "deny"

[profile.release]
lto = true
opt-level = "s"
split-debuginfo = "packed"
strip = true

[profile.bench]
debug = true
opt-level = 3
split-debuginfo = "off"
codegen-units = 1
strip = false

[profile.faststrip]
debug = false
lto = true
opt-level = 3
split-debuginfo = "off"
codegen-units = 1
incremental = false
strip = true
inherits = "release"

[package]
name = "tailscale"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# Our crates.
ts_runtime.workspace = true
ts_control.workspace = true
ts_netstack_smoltcp = { workspace = true, features = ["tokio"] }
ts_keys.workspace = true

axum = { version = "0.8", optional = true }
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Dependencies for examples
clap = { workspace = true, features = ["derive"] }
include_dir = "0.7"
mime_guess = "2.0"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["release_max_level_info"] }

ts_cli_util.workspace = true
ts_keys.workspace = true

[lints]
workspace = true

[features]
# Enable the `axum` module, which enables you to run an `axum` HTTP server on top of a tailscale TCP
# listener.
axum = ["dep:axum"]

[[example]]
name = "axum"
required-features = ["axum"]
