[package]
name = "ts_bitset"
version.workspace = true
description = "compact, efficient, non-allocating bitset"
categories = ["data-structures", "no-std::no-alloc"]
keywords = ["tailscale", "bitset", "set"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Unconditionally required dependencies.
cfg-if.workspace = true
static_assertions.workspace = true

[dev-dependencies]
divan.workspace = true
proptest.workspace = true

[features]
default = ["lut"]
lut = []

[lints]
workspace = true

[[bench]]
name = "bitset256"
harness = false
