[package]
name = "ts_capabilityversion"
version.workspace = true
description = "tailscale capability version definition"
categories = ["no-std::no-alloc"]
keywords = ["tailscale", "capability", "version"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]

[lints]
workspace = true
