[package]
name = "ts_cli_util"
version.workspace = true
description = "tailscale utilities for writing command-line tools"
categories = ["command-line-interface"]
keywords = ["tailscale", "cli", "util"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
tailscale.workspace = true
ts_control.workspace = true
ts_netcheck.workspace = true
ts_transport_derp.workspace = true

# Unconditionally required dependencies.
clap = { workspace = true, features = ["derive", "env"] }
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }

# Required dependencies for the "tracy" feature.
tracy-client = { version = "0.18", optional = true }
tracing-tracy = { version = "0.11", optional = true }

[features]
tracy = ["dep:tracing-tracy", "dep:tracy-client"]

[lints]
workspace = true
