[package]
name = "ts_control"
version.workspace = true
description = "tailscale control client"
categories = ["api-bindings", "network-programming"]
keywords = ["tailscale", "control"]

repository.workspace = true
edition.workspace = true
license.workspace = true

rust-version.workspace = true

[dependencies]
# Our crates.
ts_bitset.workspace = true
ts_capabilityversion = { workspace = true, features = ["serde"] }
ts_control_noise.workspace = true
ts_control_serde.workspace = true
ts_dynbitset.workspace = true
ts_hexdump.workspace = true
ts_http_util.workspace = true
ts_keys.workspace = true
ts_packet.workspace = true
ts_packetfilter.workspace = true
ts_packetfilter_state.workspace = true
ts_tls_util.workspace = true
ts_transport_derp.workspace = true

# Unconditionally required dependencies.
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
ipnet = { workspace = true, features = ["serde"] }
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-util = { workspace = true, features = ["time"] }
tracing.workspace = true
url = { workspace = true, features = ["serde", "std"] }
zerocopy.workspace = true

# Required dependencies for the async_tokio feature.
futures-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true, default-features = false, features = ["sync"] }

[features]
default = ["async_tokio"]
async_tokio = ["dep:futures-util", "dep:tokio", "dep:tokio-stream"]

[lints]
workspace = true
