[package]
name = "ts_control_noise"
version.workspace = true
description = "noise protocol implementation for tailscale control comms"
categories = ["encoding"]
keywords = ["tailscale", "noise", "control"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
ts_capabilityversion.workspace = true
ts_hexdump.workspace = true
ts_keys.workspace = true

# Unconditionally required dependencies.
base64.workspace = true
bytes.workspace = true
chacha20poly1305 = "0.10"
futures-util = { workspace = true, features = ["sink"] }
noise-protocol = "0.2"
noise-rust-crypto = "0.6"
pin-project-lite.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing.workspace = true
zerocopy.workspace = true
zeroize = "1.8"

[lints]
workspace = true
