[package]
name = "ts_dataplane"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["async_tokio"]
async_tokio = ["dep:tokio"]

[dependencies]
# Our crates.
ts_keys.workspace = true
ts_overlay_router.workspace = true
ts_packet.workspace = true
ts_packetfilter.workspace = true
ts_time.workspace = true
ts_transport.workspace = true
ts_underlay_router.workspace = true
ts_tunnel.workspace = true
ts_bart.workspace = true

# Unconditionally required dependencies.
etherparse = "0.19"
tracing.workspace = true

# Required dependencies for the async_tokio feature.
tokio = { workspace = true, optional = true, features = ["time", "sync"] }

[lints]
workspace = true
