[package]
name = "ts_dataplane"
version.workspace = true
description = "tailscale packet processing data plane"
categories = ["network-programming"]
keywords = ["tailscale", "dataplane", "network", "packet", "router"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["async_tokio"]
async_tokio = ["dep:tokio"]

[dependencies]
# Our crates.
ts_keys.workspace = true
ts_overlay_router.workspace = true
ts_packet.workspace = true
ts_packetfilter.workspace = true
ts_time.workspace = true
ts_transport.workspace = true
ts_underlay_router.workspace = true
ts_tunnel.workspace = true
ts_bart.workspace = true

# Unconditionally required dependencies.
etherparse = "0.19"
tracing.workspace = true

# Required dependencies for the async_tokio feature.
tokio = { workspace = true, optional = true, features = ["time", "sync"] }

[lints]
workspace = true
