[package]
name = "ts_disco_protocol"
version.workspace = true
description = "tailscale disco protocol definition"
categories = ["network-programming", "no-std::no-alloc", "encoding"]
keywords = ["tailscale", "disco", "protocol"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aead.workspace = true
thiserror.workspace = true
zerocopy.workspace = true
crypto_box.workspace = true

num-traits = "0.2"
num-derive = "0.4"

ts_keys.workspace = true

[dev-dependencies]
zerocopy = { workspace = true, features = ["std"] }

rand.workspace = true

[lints]
workspace = true

[features]
default = ["alloc"]
alloc = []
