[package]
name = "ts_ffi"
version.workspace = true
description = "c ffi bindings for tailscale-rs"
categories = ["api-bindings", "network-programming"]
keywords = ["tailscale", "c", "cbindgen", "bindings", "ffi"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
tailscale.workspace = true
ts_cli_util.workspace = true
ts_keys.workspace = true

tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["release_max_level_info"] }

[build-dependencies]
cbindgen = "0.29"

[lib]
name = "tailscalers"
crate-type = ["cdylib", "staticlib"]

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["cbindgen"]
