[package]
name = "ts_http_util"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
ts_tls_util.workspace = true

# Unconditionally required dependencies.
bytes.workspace = true
futures.workspace = true
http.workspace = true
httparse.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["http1", "client"] }
hyper-util = { workspace = true, features = ["tokio"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tracing-test = { workspace = true, features = ["no-env-filter"] }
ts_test_util.workspace = true

[lints]
workspace = true
