[package]
name = "ts_keys"
version.workspace = true
description = "tailscale cryptographic key types"
categories = ["cryptography"]
keywords = ["tailscale", "keys"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
zerocopy.workspace = true
serde = { workspace = true, optional = true }
x25519-dalek.workspace = true
crypto_box.workspace = true

[features]
serde = ["dep:serde"]

[lints]
workspace = true
