[package]
name = "ts_netcheck"
version.workspace = true
description = "tailscale network checks"
categories = ["network-programming"]
keywords = ["tailscale", "network", "netcheck"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
ts_control.workspace = true
ts_http_util.workspace = true
ts_transport_derp.workspace = true

# Unconditionally required depdendencies.
bytes.workspace = true
dashmap = "6.1"
stun-rs = "0.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "sync", "io-util", "time"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tracing-test.workspace = true
ts_control_serde.workspace = true
ts_test_util.workspace = true

[lints]
workspace = true
