[package]
name = "ts_netstack_smoltcp_socket"
version.workspace = true
description = "userspace netstack built on smoltcp (socket wrappers)"
categories = ["no-std", "network-programming"]
keywords = ["tailscale", "socket", "network", "smoltcp", "netstack"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
tracing.workspace = true

ts_netstack_smoltcp_core = { workspace = true }

tokio = { workspace = true, optional = true }
futures-io = { version = "0.3", optional = true }

[features]
tokio = ["dep:tokio", "std"]
futures-io = ["dep:futures-io", "std"]
std = ["ts_netstack_smoltcp_core/std"]
