[package]
name = "ts_overlay_router"
version.workspace = true
description = "overlay router for tailscale dataplane"
categories = ["network-programming", "data-structures"]
keywords = ["tailscale", "router", "dataplane", "network", "ip"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ts_bart.workspace = true
ts_keys.workspace = true
ts_packet.workspace = true
ts_transport.workspace = true

itertools.workspace = true
tracing.workspace = true

[lints]
workspace = true
