[package]
name = "ts_packetfilter_serde"
version.workspace = true
description = "serde for tailscale packet filters"
categories = ["encoding", "no-std"]
keywords = ["tailscale", "packet", "filter", "serde"]

repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ipnet = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
tap.workspace = true
nom = "8.0"

ts_nodecapability = { workspace = true, features = ["serde"] }
ts_peercapability = { workspace = true, features = ["serde"] }

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
