[package]
name = "ts_packetfilter_serde"
description = "serde for tailscale packet filters"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
ipnet = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
nom = "8.0"

ts_nodecapability = { workspace = true, features = ["serde"] }
ts_peercapability = { workspace = true, features = ["serde"] }

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
